fixed more alignment issues

--- a/server/static/css/index_style.css
+++ b/server/static/css/index_style.css
@@ -49,7 +49,7 @@ main {
 
 .start-game-button {
     padding:0.8rem 3rem ;
-    margin:15px;
+    margin:2vh;
     font-size: 1.2em;
     font-weight: 700;
     background-color: var(--otto-red);
@@ -96,7 +96,7 @@ main {
     display:flex;
     justify-content: space-between;
     padding: 5px 20px;
-    margin: 10px;
+    margin: 1vh;
     background-color: #eaeaea;
     border-radius: 10px;
     width: 25vw;
@@ -108,7 +108,8 @@ main {
     display:flex;
     justify-content: space-between;
     padding: 5px 20px;
-    margin: 10px;
+    margin-block: 1vh;
+    margin-inline: 1vh;
     margin-top: 30px;
     background-color: #e6e6e6;
     border-radius: 10px;
